# cdrank

./: .gitignore
client/: heatmap-cartesian.html
client/rank/: .eslintignore  .eslintrc.json  index.html  package.json
client/rank/data/: UnnormalReason.json  aviation.json  aviation_rank_list.json  east.json  east_month_rank.json  east_rank_list.json
client/rank/src/: app.vue  app.vue.bak  main.js
client/rank/src/api/: rank.js
client/rank/src/components/: pie.vue  radar.vue  scatter.vue  spread.vue
client/rank/src/libs/: request.js  util.js
client/rank/src/styles/: common.less  loading.less
client/rank/src/template/: index.ejs
client/rank/src/vendors/: vendors.base.js
server/rank/: CMakeLists.txt  main.c  rank.py
server/rank-reason/: UnnormalReasonCount.py  normalCount.py  rankReason.py
